# MLP-LLM-TEXT-TO-SQL

./: .env_exemple  .gitignore  README.md  pyproject.toml  run_mcp.py
.devcontainer/: devcontainer.json
data/raw/: questions.csv
src/core/: server.py
src/database/: connection.py  populate_db.py
src/llm/: generator.py
src/mlp/: predict.py  train.py
src/nlp/: preprocessing.py  text_to_sql.py
src/tests/: test_tools.py
